# Aura

./: .gitignore  PRODUCTION_CHECKLIST.md  THIRD_PARTY_NOTICES.md  deploy.sh
back/: .env.example  pyproject.toml
back/apps/finanzas/: apps.py  dates.py  importar.py  models.py  serializers.py  signals.py  tests.py  urls.py  utils.py  views.py
back/apps/finanzas/migrations/: 0001_initial.py  0002_presupuesto.py  0003_alter_diferido_categoria_and_more.py  0004_saldomes.py  0005_alter_saldomes_options_saldomes_recalculos_hoy_and_more.py  0006_notificacion.py  0007_ingresopuntual.py  0008_add_db_indexes.py  0009_cuentas_por_cobrar.py  0010_merge_0008_0009.py  0011_projection_eligibility_for_puntuales.py  0012_cuentas_personas_direction.py  0013_gastocorriente_tipo_monto_gastocorrienteejecucion.py
back/apps/simulador/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
back/apps/simulador/migrations/: 0001_initial.py  0002_simulacion_colchon_minimo.py  0003_enforce_colchon_minimo_positive.py
back/apps/usuarios/: admin.py  forms.py  jwt_auth.py  middleware.py  models.py  payphone.py  plans.py  security.py  serializers.py  tests.py  urls.py  views.py
back/apps/usuarios/migrations/: 0001_initial.py  0002_alter_usuario_email_adminactionlog.py  0003_emailserverconfig.py  0004_alter_adminactionlog_action_and_more.py  0005_feature_plan_planfeature_userplanassignment.py  0006_plan_precio_pagoPayPhone.py  0006_seed_advanced_projection_features.py  0007_usuario_projection_mode.py  0008_usuario_auth_token_version.py  (+5 more)
back/config/: settings.py  urls.py
(+64 files in other folders)
